@@ -6,5 +6,5 @@
   Meta:		1
   Date:		2002-07-17
   Name:		powerman
-  Version:	1.0.2
+  Version:	1.0.3
 # Release:	1
