@@ -1,3 +1,9 @@
+2002-09-17 garlick
+	* Fix bug introduced in cleanup where actions were initiated but
+	  not completed.  Select loop should only set status to STAT_OCCUPIED
+	  if action was one requiring completion.
+	* Tagged powerman-1-0-3.
+
 2002-09-16 garlick
 	* Got rid of remnants of second "completion" expect script 
 	* Got rid of cheat->g global structure.
